--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 [compat]
 CSV = "^0"
 DataFrames = "1"
+Distributions = "0.25"
 JLD2 = "0.4"
 julia = "1"
 
