--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 CSV = "^0"
