--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
 name = "VLQuantitativeFinancePackage"
 uuid = "4119e0bf-20d0-4785-913e-5ebdb0caa218"
-authors = ["jdv27"]
 version = "1.0.0-DEV"
+authors = ["jdv27"]
 
 [deps]
+COSMO = "1e616198-aa4e-51ec-90a2-23f7fbd31d8d"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
@@ -19,6 +20,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
+COSMO = "0.8.9"
 CSV = "^0"
 DataFrames = "1"
 Distributions = "0.25"
