--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ MadNLP = "2621e9c9-9eb4-46b1-8089-e8c72242dfb6"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 
 [compat]
 COSMO = "0.8.9"
@@ -30,6 +31,7 @@ JuMP = "1"
 LsqFit = "0.15"
 MadNLP = "0.7"
 Statistics = "1"
+TOML = "1.0.3"
 julia = "1"
 
 [extras]
